--- a/recompute/server/templates/recomputations.html
+++ b/recompute/server/templates/recomputations.html
@@ -39,11 +39,11 @@
                     <tr>
                         <td><a href="{{ reverse_url('recomputation', recomputation['name']) }}">{{ recomputation["name"] }}</a></td>
                         <td>{{ recomputation["id"] }}</td>
-                        <td>{{ recomputation["releases"][0]["tag"] }}</td>
-                        <td>{{ recomputation["releases"][0]["version"] }}</td>
-                        <td>{{ recomputation["releases"][0]["date"] }}</td>
-                        <td><a onclick="play('{{ recomputation['name'] }}', '{{ recomputation['releases'][0]['tag'] }}', '{{ recomputation['releases'][0]['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                        <td><a href="{{ reverse_url('download_vm', recomputation['name'], recomputation['releases'][0]['tag'], recomputation['releases'][0]['version']) }}"><i class="fa fa-download"></i> Vagrantbox</a></td>
+                        <td>{{ recomputation["vms"][0]["tag"] }}</td>
+                        <td>{{ recomputation["vms"][0]["version"] }}</td>
+                        <td>{{ recomputation["vms"][0]["date"] }}</td>
+                        <td><a onclick="play('{{ recomputation['name'] }}', '{{ recomputation['vms'][0]['tag'] }}', '{{ recomputation['vms'][0]['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                        <td><a href="{{ reverse_url('download_vm', recomputation['name'], recomputation['vms'][0]['tag'], recomputation['vms'][0]['version']) }}"><i class="fa fa-download"></i> Vagrantbox</a></td>
                     </tr>
                 {% end %}
                 </tbody>
