--- a/recompute/server/templates/recomputation.html
+++ b/recompute/server/templates/recomputation.html
@@ -2,14 +2,16 @@
 
 {% block content %}
 
+{% set latest_github_url = recomputation["vms"][0]["github_url"] %}
+{% set latest_box = recomputation["vms"][0]["box"] %}
+
 <div class="page-header">
     <h1>Recomputation: {{ recomputation["name"] }}</h1>
     <h4>Description</h4>
     <h4>
-        <a href="{{ reverse_url('edit_recomputation') }}"><i class="fa fa-pencil"></i> Edit</a>&nbsp;&nbsp;
-        <a href="{{ reverse_url('update_recomputation', recomputation['name']) }}"><i class="fa fa-refresh"></i> Update</a>&nbsp;&nbsp;
-        <a href="{{ reverse_url('delete_recomputation', recomputation['name']) }}" class="delete"><i
-                class="fa fa-trash-o"></i> Delete</a>
+        <a href="{{ reverse_url('edit_recomputation', recomputation['name']) }}"><i class="fa fa-pencil"></i> Edit</a>&nbsp;&nbsp;
+        <a href="" onclick="update_recomputation({{ recomputation['name'] }})"><i class="fa fa-refresh"></i> Update</a>&nbsp;&nbsp;
+        <a href="" onclick="delete_recomputation({{ recomputation['name'] }})" class="delete"><i class="fa fa-trash-o"></i> Delete</a>
     </h4>
 </div>
 
@@ -19,9 +21,8 @@
         <ul class="list-group">
             <li class="list-group-item"><span>Name: {{ recomputation["name"] }}</span></li>
             <li class="list-group-item"><span>ID: {{ recomputation["id"] }}</span></li>
-            <li class="list-group-item"><span>GitHub: <a href="{{ recomputation['github_url'] }}">{{
-                recomputation["github_url"] }}</a></span></li>
-            <li class="list-group-item"><span>Last Updated: {{ recomputation["releases"][0]["date"] }}</span></li>
+            <li class="list-group-item"><span>GitHub: <a href="{{ latest_github_url }}">{{ latest_github_url }}</a></span></li>
+            <li class="list-group-item"><span>Last Updated: {{ recomputation["vms"][0]["date"] }}</span></li>
         </ul>
     </div>
 </div>
@@ -50,16 +51,16 @@
                 </thead>
 
                 <tbody>
-                {% for release in recomputation["releases"] %}
+                {% for vm in recomputation["vms"] %}
                 <tr>
-                    <td>{{ release["tag"] }}</td>
-                    <td>{{ release["version"] }}</td>
-                    <td><a href="{{ release['github_url'] + '/tree/' + release['github_commit'] }}">{{ release["github_commit"] }}</a></td>
-                    <td><a href="{{ release['box_url'] + '/versions/' + release['box_version'] }}">{{ release["box"] + " v." + release["box_version"] }}</a></td>
-                    <td>{{ release["date"] }}</td>
-                    <td><a onclick="play('{{ recomputation['name'] }}', '{{ release['tag'] }}', '{{ release['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                    <td><a href="{{ reverse_url('download_vm', recomputation['name'], release['tag'], release['version']) }}"><i class="fa fa-download"></i> VM</a></td>
-                    <td><a href="{{ reverse_url('delete_vm', recomputation['name'], release['tag'], release['version']) }}" class="delete"><i class="fa fa-trash-o"></i> Delete</a></td>
+                    <td>{{ vm["tag"] }}</td>
+                    <td>{{ vm["version"] }}</td>
+                    <td><a href="{{ vm['github_url'] + '/tree/' + vm['github_commit'] }}">{{ vm["github_commit"] }}</a></td>
+                    <td><a href="{{ vm['box_url'] + '/versions/' + vm['box_version'] }}">{{ vm["box"] + " v." + vm["box_version"] }}</a></td>
+                    <td>{{ vm["date"] }}</td>
+                    <td><a onclick="play('{{ recomputation['name'] }}', '{{ vm['tag'] }}', '{{ vm['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                    <td><a href="{{ reverse_url('download_vm', recomputation['name'], vm['tag'], vm['version']) }}"><i class="fa fa-download"></i> VM</a></td>
+                    <td><a href="{{ reverse_url('delete_vm', recomputation['name'], vm['tag'], vm['version']) }}" class="delete"><i class="fa fa-trash-o"></i> Delete</a></td>
                 </tr>
                 {% end %}
                 </tbody>
