--- a/recompute/server/templates/recomputations.html
+++ b/recompute/server/templates/recomputations.html
@@ -43,7 +43,7 @@
                         <td>{{ recomputation["vms"][0]["version"] }}</td>
                         <td>{{ recomputation["vms"][0]["date"] }}</td>
                         <td><a onclick="play('{{ recomputation['name'] }}', '{{ recomputation['vms'][0]['tag'] }}', '{{ recomputation['vms'][0]['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                        <td><a href="{{ reverse_url('download_vm', recomputation['name'], recomputation['vms'][0]['tag'], recomputation['vms'][0]['version']) }}"><i class="fa fa-download"></i> Vagrantbox</a></td>
+                        <td><a href="{{ reverse_url('download_vm', recomputation['name'], recomputation['vms'][0]['tag'], recomputation['vms'][0]['version']) }}"><i class="fa fa-download"></i> VM</a></td>
                     </tr>
                 {% end %}
                 </tbody>
