--- a/recompute/server/templates/layout.html
+++ b/recompute/server/templates/layout.html
@@ -61,6 +61,7 @@ function apiStatus(data) {
 
 
 
+
 </script>
 <script src="https://status.github.com/api/status.json?callback=apiStatus"></script>
 
@@ -85,14 +86,13 @@ function apiStatus(data) {
         make_play_window(document.body, terminal_args, vm, tag, version);
     }
 
-
     function recompute(name, github_url, box) {
         win = make_recompute_window(name, github_url, box);
         $("span#running_status").html("Running...");
         $("span#running_status").css("visibility", "visible");
         $.post("{{ reverse_url('recompute') }}", { "recomputation": name, "github_url": github_url, "box": box }, function(data) {
             win.destroy();
-            alert("Server: " + data.responseText);
+            alert("Server: " + data);
             window.location.reload();
         }).error(function(data) {
             $("span#running_status").css("visibility", "hidden");
@@ -103,8 +103,9 @@ function apiStatus(data) {
 
     function update_recomputation(name, github_url, box) {
         win = make_recompute_window(name, github_url, box);
-        $.post("{{ reverse_url('update_recomputation') }}", { "recomputation": name }, function(data) {
-            alert("Server: " + data.responseText);
+        $.post("{{ reverse_url('update_recomputation') }}", {"name": name}, function(data) {
+            win.destroy();
+            alert("Server: " + data);
             window.location.reload();
         }).error(function(data) {
             win.destroy();
@@ -113,8 +114,8 @@ function apiStatus(data) {
     }
 
     function delete_recomputation(name) {
-        $.post("{{ reverse_url('delete_recomputation') }}", { "recomputation": name }, function(data) {
-            alert("Server: " + data.responseText);
+        $.post("{{ reverse_url('delete_recomputation') }}", {"name": name}, function(data) {
+            alert("Server: " + data);
             window.location.reload();
         }).error(function(data) {;
             alert("Server: " + data.responseText);
@@ -122,13 +123,14 @@ function apiStatus(data) {
     }
 
     function delete_vm(name, tag, version) {
-        $.post("{{ reverse_url('delete_vm') }}", { "recomputation": name,  "tag": tag, "version": version }, function(data) {
-            alert("Server: " + data.responseText);
+        $.post("{{ reverse_url('delete_vm') }}", { "name": name,  "tag": tag, "version": version }, function(data) {
+            alert("Server: " + data);
             window.location.reload();
         }).error(function(data) {;
             alert("Server: " + data.responseText);
         });
     }
+
 
 
 </script>
