--- a/recompute/server/templates/edit_recomputation.html
+++ b/recompute/server/templates/edit_recomputation.html
@@ -4,36 +4,44 @@
 
 <div class="col-lg-6 col-lg-offset-3 well">
 
-<form class="form-horizontal" action="" method="post" name="edit_recomputation">
-    <fieldset>
-        <legend>Edit Recomputation: {{ recomputation["name"] }}</legend>
-        <div class="form-group">
+    <form class="form-horizontal" action="{{ reverse_url('edit_recomputation', recomputation['name']) }}" method="post"
+          id="edit_recomputation">
+        <fieldset>
+            <legend>Edit Recomputation: {{ recomputation["name"] }}</legend>
+            <div class="form-group">
                 <label for="select" class="col-lg-2 control-label">Name</label>
-                <div class="col-lg-10">
-                        {{ edit_recomputation_form.recomputation(class_="form-control") }}
-                </div>
-        </div>
-        <div class="form-group">
-                <label for="select" class="col-lg-2 control-label">GitHub URL</label>
-                <div class="col-lg-10">
-                        {{ edit_recomputation_form.github_url(class_="form-control") }}
-                </div>
-        </div>
-        <div class="form-group">
-                <label for="select" class="col-lg-2 control-label">Description</label>
-                <div class="col-lg-10">
-                        {{ edit_recomputation_form.description(class_="form-control") }}
-                </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-lg-10 col-lg-offset-2">
-                <a href="{{ reverse_url('recomputation', recomputation['name']) }}" class="btn btn-default">Cancel</a>
-                <input id="lol" data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right" class="btn btn-success" type="submit" value="Save">
+                <div class="col-lg-10">
+                    {{ edit_recomputation_form.recomputation(class_="form-control") }}
+                </div>
             </div>
-        </div>
-    </fieldset>
-</form>
+            <div class="form-group">
+                <label for="select" class="col-lg-2 control-label">GitHub URL</label>
+
+                <div class="col-lg-10">
+                    {{ edit_recomputation_form.github_url(class_="form-control") }}
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="select" class="col-lg-2 control-label">Description</label>
+
+                <div class="col-lg-10">
+                    {{ edit_recomputation_form.description(class_="form-control") }}
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-lg-10 col-lg-offset-2">
+                    <a href="{{ reverse_url('recomputation', recomputation['name']) }}"
+                       class="btn btn-default">Cancel</a>
+                    <button type="button"
+                            onclick="fire_edit_recomputation('{{ reverse_url('recomputation_by_id', recomputation['id']) }}');"
+                            class="btn btn-success">Save
+                    </button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
 
 </div>
 
