--- a/recompute/server/templates/test_machine.html
+++ b/recompute/server/templates/test_machine.html
@@ -21,23 +21,23 @@
     http://dx.doi.org/abc/001
   </div>
 
-  <div class="sourceandplay">
+  <div class="side">
 
-    <div class="sourceandplaybuttons">
+    <div class="sidebutton">
       <!--  recomputation["sourcecode"]  -->
       <a href="{{ latest_github_url }}">Github</a>
     </div>
 
-    <div class="sourceandplaybuttons">
+    <div class="sidebutton">
       <a onclick="play('{{ recomputation['name'] }}', '{{ vm['tag'] }}', '{{ vm['version'] }}');"><i class="fa fa-play-circle"></i> Play</a>
     </div>
 
-    <div class="sourceandplaybuttons">
+    <div class="sidebutton">
       Orcid / Research object
     </div>
 
   </div>
-<!-- end of sourceandplay -->
+<!-- end of side -->
 
 </div>
 <!-- end of landing_container -->
