--- a/recompute/server/static/landing.css
+++ b/recompute/server/static/landing.css
@@ -5,10 +5,10 @@
 .landing_container {
   display: table;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 50px;
   width: 80%;
+  border: 2px solid #73AD21;
   background-color: #F2EFFB;
-  border-radius: 25px;
   padding: 20px;
 }
 
@@ -19,34 +19,6 @@
   float: left;
   width: 45%;
   padding: 10px;
-}
-
-.sidebuttons {
-  float:right;
-}
-
-.sidebutton {
-  margin-top: 10px;
-  border-radius: 15px;
-  border: 2px solid #73AD21;
-  background-color: #FAFAFA;
-  padding: 5px;
-  text-align: center;
-}
-
-
-.playbuttons {
-  margin: 0 auto;
-}
-
-.playbutton {
-  float:left;
-  margin: auto;
-  border-radius: 15px;
-  border: 2px solid #73AD21;
-  background-color: #FAFAFA;
-  padding: 5px;
-  text-align: center;
 }
 
 .upperpart {
@@ -61,6 +33,49 @@
   overflow: hidden;
 }
 
+.sidebuttons {
+  float:right;
+  width: 30%;
+}
+
+.sidebutton {
+  margin: 8 px;
+  border-radius: 15px;
+  border: 2px solid #73AD21;
+  background-color: #FAFAFA;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
+
+.playbuttons {
+  margin: 150px;
+}
+
+.controls {
+  float: left;
+  margin: 20px;
+  border-radius: 10px;
+  border: 2px solid #73AD21;
+  background-color: #DFE1E4;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+  width: 25%;
+}
+
+#rewind {
+  float: left;
+}
+
+#play {
+  margin: 0 auto;
+}
+
+#fastforward {
+  float: right;
+}
 /*.sourcecode {
   padding: 5px;
   border-radius: 7px;
