--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block jumbo %}
 
-    <div class="jumbotron">
+    <div class="jumbotron" style="border: 2px solid #73AD21;">
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
