--- a/recompute/server/templates/recomputations.html
+++ b/recompute/server/templates/recomputations.html
@@ -1,61 +1,72 @@
 
 {% extends "layout.html" %}
 
-{% block content %}
+{% block jumbo %}
 
-    <div class="page-header">
-        <h1>Recomputations</h1>
-    </div>
-
-    <div class="top-buffer row">
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-6">
-                    <form class="form-inline" action="{{ reverse_url('recomputations') }}" method="POST">
-                        <div class="form-group">
-                            <label for="name" >Name</label>
-                            {{ filter_recomputations_form.name(class_="form-control", placeholder="Name") }}
-                        </div>
-
-                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Search</button>
-                    </form>
-                </div>
+  <div class="jumbotron" style="border: 2px solid #73AD21;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+              <h2>Recomputations</h2>
             </div>
-
-            <table class="top-buffer table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>NAME</th>
-                        <th>VM ID</th>
-                        <th>TAG</th>
-                        <th>VERSION</th>
-                        <th>LAST UPDATED</th>
-                        <th>PLAY</th>
-                        <th>DOWNLOAD</th>
-                        <th>PERSISTENT ID</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for recomputation in recomputations %}
-                    <tr>
-                        <td><a href="{{ reverse_url('recomputation', recomputation['name']) }}">{{ recomputation["name"] }}</a></td>
-                        <td>{{ recomputation["id"] }}</td>
-                        <td>{{ recomputation["vms"][0]["tag"] }}</td>
-                        <td>{{ recomputation["vms"][0]["version"] }}</td>
-                        <td>{{ recomputation["vms"][0]["date"] }}</td>
-                        <td><a onclick="play('{{ recomputation['name'] }}', '{{ recomputation['vms'][0]['tag'] }}', '{{ recomputation['vms'][0]['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                        <td><a href="{{ reverse_url('download_vm', recomputation['name'], recomputation['vms'][0]['tag'], recomputation['vms'][0]['version']) }}"><i class="fa fa-download"></i> VM</a></td>
-                        <td><a href="
-                          {% if recomputation['doi'] is None %}
-                          {{ reverse_url('requestdoi', recomputation['name']) }}"><i class="fa"></i>Request</a></td>
-                          {% else %}
-                          {{ reverse_url('landing', recomputation['name']) }}"><i class="fa"></i>{{ recomputation['doi'] }}</a></td>
-                          {% end %}
-                        </tr>
-                {% end %}
-                </tbody>
-            </table>
         </div>
     </div>
+  </div>
+
+{% end %}
+
+{% block content %}
+
+
+  <div class="top-buffer row">
+      <div class="col-md-12">
+          <div class="row">
+              <div class="col-md-6">
+                  <form class="form-inline" action="{{ reverse_url('recomputations') }}" method="POST">
+                      <div class="form-group">
+                          <label for="name" >Name</label>
+                          {{ filter_recomputations_form.name(class_="form-control", placeholder="Name") }}
+                      </div>
+
+                      <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Search</button>
+                  </form>
+              </div>
+          </div>
+
+          <table class="top-buffer table table-striped table-hover">
+              <thead>
+                  <tr>
+                      <th>NAME</th>
+                      <th>VM ID</th>
+                      <th>TAG</th>
+                      <th>VERSION</th>
+                      <th>LAST UPDATED</th>
+                      <th>PLAY</th>
+                      <th>DOWNLOAD</th>
+                      <th>PERSISTENT ID</th>
+                  </tr>
+              </thead>
+              <tbody>
+              {% for recomputation in recomputations %}
+                  <tr>
+                      <td><a href="{{ reverse_url('recomputation', recomputation['name']) }}">{{ recomputation["name"] }}</a></td>
+                      <td>{{ recomputation["id"] }}</td>
+                      <td>{{ recomputation["vms"][0]["tag"] }}</td>
+                      <td>{{ recomputation["vms"][0]["version"] }}</td>
+                      <td>{{ recomputation["vms"][0]["date"] }}</td>
+                      <td><a onclick="play('{{ recomputation['name'] }}', '{{ recomputation['vms'][0]['tag'] }}', '{{ recomputation['vms'][0]['version'] }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                      <td><a href="{{ reverse_url('download_vm', recomputation['name'], recomputation['vms'][0]['tag'], recomputation['vms'][0]['version']) }}"><i class="fa fa-download"></i> VM</a></td>
+                      <td><a href="
+                        {% if recomputation['doi'] is None %}
+                        {{ reverse_url('requestdoi', recomputation['name']) }}"><i class="fa"></i>Request</a></td>
+                        {% else %}
+                        {{ reverse_url('landing', recomputation['name']) }}"><i class="fa"></i>{{ recomputation['doi'] }}</a></td>
+                        {% end %}
+                      </tr>
+              {% end %}
+              </tbody>
+          </table>
+      </div>
+  </div>
 
 {% end %}
