--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -6,8 +6,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <h1>Recompute</h1>
-                    <p>Recomputations: {{ recomputations_count }}</p>
+                    <h2>Recompute</h2>
+                    <!-- <p>Recomputations: {{ recomputations_count }}</p> -->
                 </div>
             </div>
         </div>
